# expense_analyzer

./: .gitignore  INSTALLATION_VERIFICATION.md  LICENSE  QUICKSTART.md  README.esp.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
config/: config.json
data/: expenses_example.csv
modules/: __init__.py  analysis.py  reading.py  reporter.py  visualization.py
tests/: __init__.py  conftest.py  test_analysis.py  test_config.py  test_reading.py  test_validators.py
utils/: __init__.py  config_loader.py  logger.py  path_utils.py  validators.py
